# ARGUS-Research

./: .gitignore  AGENTS.md  ARGUS.code-workspace  ARGUS.url  ARGUS_CODEX.md  README.md  WORKSPACE.md
.cursor/rules/: argus-research.mdc
argus/: .cursorignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
argus/.github/workflows/: ci.yml  dco.yml
argus/docs/: WORKSPACE.md
argus/docs/codex/: 00_README.md  01_architecture.md  02_v12_canonical_definitions.md  03_defects.md  05_decisions.md  06_citations.md  99_split_script.sh  README.md
argus/docs/codex/04_audits/: v11_audit.md
argus/docs/codex/papers/: paper1_workshop_template.md  paper2_reference_arch.md  paper3_practitioner_essay.md
argus/docs/codex/wedges/: wedge1_dependence_reranker.md  wedge2_provenance_loader.md  wedge3_calibration_layer.md
argus/examples/: ftx_demo.py
argus/scripts/: dev_setup.ps1  dev_setup.sh
argus/src/argus_rerank/: __init__.py  calibration.py  cli.py  copy_detection.py  dependence_graph.py  effective_corroboration.py  models.py  near_duplicate.py  reranker.py
argus/tests/: conftest.py  test_calibration.py  test_cli.py  test_copy_detection.py  test_dependence_graph.py  test_effective_corroboration.py  test_models.py  test_near_duplicate.py  test_reranker.py
